tugas html week 1 fix

--- a/hero.html
+++ b/hero.html
@@ -16,4 +16,7 @@
 <li class= "AV"><input type="image" src= "https://upload.wikimedia.org/wikipedia/commons/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg" width= "400" Height= "400"></li>
 </ul>
 </body>
+<footer>
+<h4 class: "cpr">© Copyright 2018 By Abiyasa Panatagama</h4>
+</footer>
 </html>
